Use custom linked list to store list of frequencies